# understanding-cmake-application

./: CMakeLists.txt  main.cpp
.cmake/: All.cmake  DownloadAndInstallLibrary.cmake  MyProvider.cmake  ResolveClasses.cmake
.cmake/libraries/: my_library.cmake
.devcontainer/: Dockerfile
module/: CMakeLists.txt  module.cpp  module.h
tests/: my_test.cpp
